# models/transaction.go
@@ -1,0 +1,10 @@
+package models
+
+import (
+	"time"
+)
+
+type Transaction struct {
+	Date  time.Time `firestore:"date"`
+	Value int       `firestore:"value"`
+}
